# logview

./: Dockerfile  README.md  backend-config.json  config.example.json  config.json  docker-compose.yml  errors  example.env  frontend-config.example.json  frontend-config.json  nohup.out  pyproject.toml  test_api.py  test_sse_auth.py
frontend/logview-frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/logview-frontend/public/: config.json
frontend/logview-frontend/src/: App.test.tsx  App.tsx  api.ts  config.ts  types.ts  vite-env.d.ts
frontend/logview-frontend/src/components/: FileList.tsx  FileTail.tsx  FileViewer.tsx  ServerConfig.tsx
logview/: __init__.py  auth.py  config.py  file_service.py  main.py
